# dbgfmt

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  dist-workspace.toml  prek.toml
.github/workflows/: audit.yml  auto-tag.yml  ci.yml  publish-crates.yml  release.yml
src/: color.rs  formatter.rs  lib.rs  main.rs  tokenizer.rs
tests/: cli.rs  integration.rs
